# todo-server

./: Cargo.toml  api.org  docker-compose.yml
src/: lib.rs  main.rs
src/todo_api/: adapter.rs  model.rs
src/todo_api/db/: helpers.rs  todo.rs
src/todo_api_web/: controller.rs  model.rs  routes.rs
src/todo_api_web/controller/: todo.rs
tests/todo_api_web/: controller.rs
