[package]
name = "todo-server"
version = "0.1.0"
authors = ["Vinícius Simões <vinicius.simoes95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
num_cpus = "1.13.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
uuid = {version = "0.8.2", features = ["serde", "v4"]}

[dev-dependencies]
actix-rt = "2.2.0"
actix-service = "2.0.0"
